@@ -138,7 +138,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>--enable-preview --enable-native-access=com.sshtools.pty4j</argLine>
+                    <argLine>--enable-native-access=com.sshtools.pty4j</argLine>
                 </configuration>
             </plugin>
             
@@ -146,7 +146,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<enablePreview>true</enablePreview>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>info.picocli</groupId>
@@ -786,7 +785,7 @@
 		<dependency>
 			<groupId>com.sshtools</groupId>
 			<artifactId>pty4j21</artifactId>
-			<version>0.22.2</version> 
+			<version>0.22.3-SNAPSHOT</version> 
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains.pty4j</groupId>
